--- a/src/Index.html
+++ b/src/Index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="src/Main.css">
     
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet"> </link>
+          rel="stylesheet"/>
 </head>
 
 <body>
